@startuml


entity Scene {
  id: int
  --
  idUser: int <FK>
  nom: string
  equipe: int
  description: string
  format: string
  lienVignetteImage: string
  lienExecutable: string
  lienImage: string
  created_at: datetime
  updated_at: datetime
}

entity User {
  id: int
  --
  nom: string
  email: string
  password: string
  admin: boolean
  avatar: string
created_at: datetime
updated_at: datetime
}

entity Commentaire {
  id: int
  --
    idUser: int <FK>
    idScene: int <FK>
  titre: string
  corp: string
  created_at: datetime
  updated_at: datetime
}

entity Note{
  idUser: int <FK>
  idScene: int <FK>
  --
  note: int [0,5]
  created_at: datetime
  updated_at: datetime
}

entity Favori {
  idUser: int <FK>
  idScene: int <FK>
  --
    created_at: datetime
    updated_at: datetime
}

User "1" --> "0..*" Scene
(User,Scene)  -->  Commentaire
(User,Scene)  --> Note
User "1" --> "0..*" Favori
Scene "1" --> "0..*" Favori

@enduml
